--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -58,14 +58,21 @@
     padding-bottom: 70px;
   }
 }
+.squre-shape-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 340px;
+  overflow: hidden;
+  margin-top: -170px;
+}
 .counter-squre-shape {
   width: 245px;
   height: 245px;
   border-radius: 18px;
   background: linear-gradient( -45deg, rgb(227,0,8) 0%, rgb(250,174,0) 100%);
-  transform: rotate(-124deg);
+  transform: translateY(-50%) rotate(-124deg);
   right: -135px;
-  bottom: -110px;
+  top: 50%;
   position: absolute;
 
   @include rmaxwd(991) {
@@ -75,7 +82,6 @@
     bottom: -50px;
   }
 }
-
 // Why Choose Us Area
 .why-choose-us-area {
   margin-top: -74px;
@@ -184,16 +190,16 @@
   height: 200px;
   border-radius: 18px;
   @include gradient-color-red;
-  transform: rotate(27deg);
+  transform: translateY(-50%) rotate(27deg);
   left: -36px;
-  top: -90px;
+  top: 50%;
   position: absolute;
+  z-index: 9;
 
   @include rmaxwd(991) {
     width: 100px;
     height: 100px;
     left: -50px;
-    top: -50px;
   }
 }
 .blue-overlay {
